@@ -8575,10 +8575,13 @@ static void zend_compile_property_hooks(
 
 	ce->num_hooked_props++;
 
+	/* See zend_link_hooked_object_iter(). */
+#ifndef ZEND_OPCACHE_SHM_REATTACHMENT
 	if (!ce->get_iterator) {
 		/* Will be removed again, in case of Iterator or IteratorAggregate. */
 		ce->get_iterator = zend_hooked_object_get_iterator;
 	}
+#endif
 
 	if (!prop_info->ce->parent_name) {
 		zend_verify_hooked_property(ce, prop_info, prop_name);
@@ -9104,6 +9107,10 @@ static void zend_compile_class_decl(znode *result, zend_ast *ast, bool toplevel)
 
 	/* We currently don't early-bind classes that implement interfaces or use traits */
 	if (!ce->num_interfaces && !ce->num_traits && !ce->num_hooked_prop_variance_checks
+#ifdef ZEND_OPCACHE_SHM_REATTACHMENT
+	 /* See zend_link_hooked_object_iter(). */
+	 && !ce->num_hooked_props
+#endif
 	 && !(CG(compiler_options) & ZEND_COMPILE_WITHOUT_EXECUTION)) {
 		if (toplevel) {
 			if (extends_ast) {
