@@ -10,6 +10,8 @@ PHP                                                                        NEWS
 - Core:
   . Fixed bug OSS-Fuzz #382922236 (Duplicate dynamic properties in hooked object
     iterator properties table). (ilutov)
+  . Fixed unstable get_iterator pointer for hooked classes in shm on Windows.
+    (ilutov)
 
 - DBA:
   . Skip test if inifile is disabled. (orlitzky)
